loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:5: error: value prendBiscuit is not a member of Unit
possible cause: maybe a semicolon is missing before `value prendBiscuit'?
} prendBiscuit();
  ^LoopFor:8: error: value poseBiscuit is not a member of Unit
possible cause: maybe a semicolon is missing before `value poseBiscuit'?
} poseBiscuit()
  ^